--- a/myapp/views/contact.hbs
+++ b/myapp/views/contact.hbs
@@ -45,6 +45,7 @@
 
         /* Ensure mobile nav links are styled and visible */
         #mobileNav {
+            
             transform: translateX(100%);
             /* Start off-screen to the right */
             transition: transform 0.3s ease;
@@ -175,13 +176,13 @@
     
     <section class="bg-gray-900 mt-8 fade-in">
         <div class="py-8 lg:py-16 px-4 mx-auto max-w-screen-md fade-in">
-            <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-center text-gray-900 dark:text-white">Contact Us
+            <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-center text-white">Contact Us
             </h2>
             <p class="mb-8 lg:mb-16 font-light text-center text-gray-500 dark:text-gray-400 sm:text-xl">Reach out to us
                 for any queries related to our events or anything related to init Association</p>
             <form action="/sendMessage" class="space-y-8" method="post">
                 <div>
-                    <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Your
+                    <label for="email" class="block mb-2 text-sm font-medium text-gray-300">Your
                         email</label>
                     <input type="email" id="email" name="email"
                         class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light"
@@ -189,13 +190,13 @@
                 </div>
                 <div>
                     <label for="subject"
-                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Subject</label>
+                        class="block mb-2 text-sm font-medium text-gray-300">Subject</label>
                     <input type="text" id="subject" name="subject"
                         class="block p-3 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 shadow-sm focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light"
                         placeholder="Let us know how we can help you" required>
                 </div>
                 <div class="sm:col-span-2">
-                    <label for="message" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-400">Your
+                    <label for="message" class="block mb-2 text-sm font-medium text-gray-400">Your
                         message</label>
                     <textarea id="message" rows="6" name="message"
                         class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg shadow-sm border border-gray-300 focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
