--- a/myapp/views/members.hbs
+++ b/myapp/views/members.hbs
@@ -26,13 +26,7 @@
             /* or use 'dark' if you want your website to always be dark themed */
         }
 
-        nav,
-        {
-        font-family: "Kode Mono", monospace;
-        font-optical-sizing: auto;
-        font-weight: <weight>;
-        font-style: normal;
-        }
+        
 
         main {
             display: flex;
@@ -40,6 +34,13 @@
             justify-content: center;
             margin-top: 20px;
             font-family: 'Poppins', sans-serif;
+        }
+        nav
+        {
+        font-family: "Kode Mono", monospace;
+        font-optical-sizing: auto;
+        font-weight: <weight>;
+        font-style: normal;
         }
 
         /* Ensure mobile nav links are styled and visible */
@@ -66,6 +67,11 @@
             align-items: center;
             font-size: 1.5rem;
             z-index: 9999;
+            transform: translateX(-100%);
+            transition: transform 0.3s ease;
+            top: 0;
+            /* Ensure it is aligned with the top */
+            left: 0;
         }
 
         #mobileNav a:hover {
@@ -76,15 +82,8 @@
             z-index: 60;
         }
 
-        /* Mobile Nav initial hidden state */
-        #mobileNav {
-            transform: translateX(-100%);
-            transition: transform 0.3s ease;
-            top: 0;
-            /* Ensure it is aligned with the top */
-            left: 0;
-            /* Align with the left side */
-        }
+        
+        
 
         /* Mobile Nav active state */
         #mobileNav.active {
@@ -390,7 +389,7 @@
     <section class="bg-gray-900 mt-8 fade-in">
         <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-6">
             <div class="mx-auto mb-8 max-w-screen-sm lg:mb-16">
-                <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Our team</h2>
+                <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-white">Our team</h2>
                 <p class="font-light text-gray-500 sm:text-xl dark:text-gray-400">Our team helps us move forward beyond
                     imaginations.</p>
             </div>
@@ -400,14 +399,14 @@
                 <div class="text-center text-gray-500 dark:text-gray-400">
                     <img class="mx-auto mb-4 w-36 h-36 rounded-full" src="/memberImage/{{this._id}}"
                         alt="Bonnie Avatar">
-                    <h3 class="mb-1 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
+                    <h3 class="mb-1 text-2xl font-bold tracking-tight text-white">
                         <a href="#">{{this.name}}</a>
                     </h3>
                     <p>{{this.designation}}</p>
                     <ul class="flex justify-center mt-4 space-x-4">
                         <li>
                             <a href="{{this.instagramLink}}"
-                                class="text-[#E4405F] hover:text-gray-900 dark:hover:text-white">
+                                class="text-[#E4405F] hover:hover:text-white">
                                 <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                                     <path fill-rule="evenodd"
                                         d="M12 2.163c3.204 0 3.584.012 4.849.07 1.366.062 2.633.325 3.608 1.3.975.975 1.237 2.242 1.299 3.608.058 1.265.07 1.645.07 4.849s-.012 3.584-.07 4.849c-.062 1.366-.325 2.633-1.3 3.608-.975.975-2.242 1.237-3.608 1.299-1.265.058-1.645.07-4.849.07s-3.584-.012-4.849-.07c-1.366-.062-2.633-.325-3.608-1.3-.975-.975-1.237-2.242-1.299-3.608C2.175 15.747 2.163 15.367 2.163 12s.012-3.584.07-4.849c.062-1.366.325-2.633 1.3-3.608.975-.975 2.242-1.237 3.608-1.299 1.265-.058 1.645-.07 4.849-.07zm0-2.163C8.755 0 8.343.013 7.052.072 5.748.131 4.472.392 3.419 1.445 2.366 2.498 2.105 3.774 2.046 5.078c-.059 1.291-.072 1.703-.072 5.051s.013 3.759.072 5.051c.059 1.291.32 2.567 1.373 3.62 1.053 1.053 2.329 1.314 3.62 1.373 1.291.059 1.703.072 5.051.072s3.759-.013 5.051-.072c1.291-.059 2.567-.32 3.62-1.373 1.053-1.053 1.314-2.329 1.373-3.62.059-1.291.072-1.703.072-5.051s-.013-3.759-.072-5.051c-.059-1.291-.32-2.567-1.373-3.62C19.528.392 18.252.131 16.948.072 15.657.013 15.245 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zm0 10.162a3.999 3.999 0 110-7.998 3.999 3.999 0 010 7.998zm6.406-11.845a1.44 1.44 0 11-2.88 0 1.44 1.44 0 012.88 0z"
@@ -418,7 +417,7 @@
 
                         <li>
                             <a href="{{this.linkedinLink}}"
-                                class="text-[#0A66C2] hover:text-gray-900 dark:hover:text-white">
+                                class="text-[#0A66C2] hover:hover:text-white">
                                 <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                                     <path fill-rule="evenodd"
                                         d="M19.252 3C20.747 3 22 4.224 22 5.76V18.24C22 19.776 20.747 21 19.252 21H4.748C3.253 21 2 19.776 2 18.24V5.76C2 4.224 3.253 3 4.748 3h14.504zM7.052 9.167h-2.5V18h2.5V9.167zM5.802 8.163c-.858 0-1.547-.698-1.547-1.563 0-.864.689-1.563 1.547-1.563.859 0 1.548.698 1.548 1.563 0 .865-.689 1.563-1.548 1.563zm10.5 9.833h-2.5v-3.959c0-.99-.02-2.268-1.38-2.268-1.382 0-1.593 1.083-1.593 2.201v4.026h-2.5V9.167h2.4v1.205h.034c.334-.63 1.149-1.295 2.368-1.295 2.535 0 3.005 1.668 3.005 3.835V18h-.038z"
@@ -438,7 +437,7 @@
     <section class="bg-gray-900 mt-8 fade-in">
         <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-6">
             <div class="mx-auto mb-8 max-w-screen-sm lg:mb-16">
-                <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Past Members</h2>
+                <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-white">Past Members</h2>
                 <p class="font-light text-gray-500 sm:text-xl dark:text-gray-400">
                     Our past members have played a crucial role in shaping our organization.</p>
                 </p>
@@ -449,14 +448,14 @@
                 <div class="text-center text-gray-500 dark:text-gray-400">
                     <img class="mx-auto mb-4 w-36 h-36 rounded-full" src="/memberImage/{{this._id}}"
                         alt="Bonnie Avatar">
-                    <h3 class="mb-1 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
+                    <h3 class="mb-1 text-2xl font-bold tracking-tight text-white">
                         <a href="#">{{this.name}}</a>
                     </h3>
                     <p>{{this.designation}}</p>
                     <ul class="flex justify-center mt-4 space-x-4">
                         <li>
                             <a href="{{this.instagramLink}}"
-                                class="text-[#E4405F] hover:text-gray-900 dark:hover:text-white">
+                                class="text-[#E4405F] hover:hover:text-white">
                                 <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                                     <path fill-rule="evenodd"
                                         d="M12 2.163c3.204 0 3.584.012 4.849.07 1.366.062 2.633.325 3.608 1.3.975.975 1.237 2.242 1.299 3.608.058 1.265.07 1.645.07 4.849s-.012 3.584-.07 4.849c-.062 1.366-.325 2.633-1.3 3.608-.975.975-2.242 1.237-3.608 1.299-1.265.058-1.645.07-4.849.07s-3.584-.012-4.849-.07c-1.366-.062-2.633-.325-3.608-1.3-.975-.975-1.237-2.242-1.299-3.608C2.175 15.747 2.163 15.367 2.163 12s.012-3.584.07-4.849c.062-1.366.325-2.633 1.3-3.608.975-.975 2.242-1.237 3.608-1.299 1.265-.058 1.645-.07 4.849-.07zm0-2.163C8.755 0 8.343.013 7.052.072 5.748.131 4.472.392 3.419 1.445 2.366 2.498 2.105 3.774 2.046 5.078c-.059 1.291-.072 1.703-.072 5.051s.013 3.759.072 5.051c.059 1.291.32 2.567 1.373 3.62 1.053 1.053 2.329 1.314 3.62 1.373 1.291.059 1.703.072 5.051.072s3.759-.013 5.051-.072c1.291-.059 2.567-.32 3.62-1.373 1.053-1.053 1.314-2.329 1.373-3.62.059-1.291.072-1.703.072-5.051s-.013-3.759-.072-5.051c-.059-1.291-.32-2.567-1.373-3.62C19.528.392 18.252.131 16.948.072 15.657.013 15.245 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zm0 10.162a3.999 3.999 0 110-7.998 3.999 3.999 0 010 7.998zm6.406-11.845a1.44 1.44 0 11-2.88 0 1.44 1.44 0 012.88 0z"
@@ -467,7 +466,7 @@
 
                         <li>
                             <a href="{{this.linkedinLink}}"
-                                class="text-[#0A66C2] hover:text-gray-900 dark:hover:text-white">
+                                class="text-[#0A66C2] hover:hover:text-white">
                                 <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                                     <path fill-rule="evenodd"
                                         d="M19.252 3C20.747 3 22 4.224 22 5.76V18.24C22 19.776 20.747 21 19.252 21H4.748C3.253 21 2 19.776 2 18.24V5.76C2 4.224 3.253 3 4.748 3h14.504zM7.052 9.167h-2.5V18h2.5V9.167zM5.802 8.163c-.858 0-1.547-.698-1.547-1.563 0-.864.689-1.563 1.547-1.563.859 0 1.548.698 1.548 1.563 0 .865-.689 1.563-1.548 1.563zm10.5 9.833h-2.5v-3.959c0-.99-.02-2.268-1.38-2.268-1.382 0-1.593 1.083-1.593 2.201v4.026h-2.5V9.167h2.4v1.205h.034c.334-.63 1.149-1.295 2.368-1.295 2.535 0 3.005 1.668 3.005 3.835V18h-.038z"
