index page ui improved

--- a/myapp/views/about.hbs
+++ b/myapp/views/about.hbs
@@ -260,30 +260,43 @@
             <a href="/about">ABOUT US</a>
         </div>
     </nav>
-    <!-- About Section -->
-    <section>
-        <div class="max-w-screen-xl mx-auto">
-            <div class="sm:flex items-center">
-                <div class="sm:w-1/2 p-10 fade-in">
-                    <img src="https://i.imgur.com/WbQnbas.png" alt="About Us">
-                </div>
-                <div class="sm:w-1/2 p-5 fade-in">
-                    <span class="text-gray-500 border-b-2 border-indigo-600 uppercase">About us</span>
-                    <h2 class="my-4 font-bold text-3xl sm:text-4xl">
-                        <span class="text-indigo-600">Our Association</span>
-                    </h2>
-                    <p class="text--700 text-white">
-                        We are an association focused on promoting innovation and excellence in the IT and AD
-                        department.
-                        Our mission is to foster collaboration, create opportunities, and support our members in their
-                        professional growth.
-                        From conferences to tech talks to tech events, we bring the best minds together to shape the
-                        future of IT.
-                    </p>
-                </div>
-            </div>
+
+
+    <div class="bg-gray-900">
+      <header class="bg-gray-900 text-white text-center py-12">
+        <h1 class="text-4xl font-bold mt-16">About Us</h1>
+      </header>
+
+      <section class="text-center py-12 px-4 bg-gray-800">
+        <h2 class="text-2xl font-bold">Mission And Values</h2>
+        <p class="mt-4 text-gray-700 max-w-2xl mx-auto">
+          Our mission is to provide exceptional healthcare services with a focus on availability, reliability, and support.
+        </p>
+        <div class="flex justify-center space-x-8 mt-8 animate-fadeIn">
+          <div class="transition transform hover:scale-110">
+            <h3 class="text-xl font-bold" >10</h3>
+            <p class="text-gray-700">Core Members</p>
+          </div>
+          <div class="transition transform hover:scale-110">
+            <h3 class="text-xl font-bold" >300+</h3>
+            <p class="text-gray-700">Members</p>
+          </div>
         </div>
-    </section>
+      </section>
+
+      <section class="bg-gray-500 text-white py-12 px-4">
+        <h2 class="text-2xl font-bold text-center">Our Vision</h2>
+        <p class="mt-4 text-center max-w-2xl mx-auto">
+          Healthcare anytime, anywhere. We aim to revolutionize the healthcare industry by making quality healthcare accessible to everyone.
+        </p>
+      </section>
+
+      
+
+      <footer class="bg-green-500 text-white text-center py-8">
+        <p>&copy; Copyright [Your Name] . All rights reserved. Made By Binary Boats⛵</p>
+      </footer>
+    </div>
 
     <script>
         // Navbar scroll effect
