--- a/myapp/views/index.hbs
+++ b/myapp/views/index.hbs
@@ -236,7 +236,8 @@
 
 
         <div class="relative">
-            <div class="sticky top-0 h-screen flex flex-col items-center justify-center bg-gray-800 to-blue-200" id="next">
+            <div class="sticky top-0 h-screen flex flex-col items-center justify-center bg-gray-800 to-blue-200"
+                id="next">
                 <div class="flex flex-wrap">
                     <div class="w-full sm:w-8/12 mb-10">
                         <div class="container mx-auto h-full sm:p-10">
@@ -334,7 +335,7 @@
         <div class=" bg-gray-900 pt-9">
             <div class="mx-auto w-full max-w-[1166px] px-4 xl:px-0">
                 <div class="flex flex-col justify-between sm:px-[18px] md:flex-row md:px-10">
-                    <div class="md:w-[316px] lg:ml-20">
+                    <div class="md:w-[316px] ">
                         <p class="text-[18px] font-medium text-white">
                         <h1 class="text-green-500 font-extrabold">
                             <span class="text-white">init</span>()<br><span class="text-white">ASSOCIATION</span>
@@ -352,7 +353,7 @@
                                 class="text-white hover:text-gray-400">LinkedIn <i class="fab fa-linkedin"></i></a>
                         </div>
                     </div>
-                    <div class="md:w-[316px] lg:ml-20">
+                    <div class="md:w-[316px] ">
                         <div class="mt-[23px] flex">
                             <div class="flex h-[38px] w-[38px] items-center justify-center rounded-[75%]">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -403,7 +404,7 @@
                     </div>
                     <div
                         class="mt-6 flex w-full flex-col justify-between text-white sm:flex-row md:mt-0 md:max-w-[341px] ml-15">
-                        <div class="lg:ml-20">
+                        <div class="">
                             <p class="text-deutziawhite font-inter text-[18px] font-medium leading-normal">Pages</p>
                             <ul>
                                 <li class="mt-[15px]"><a
@@ -421,21 +422,30 @@
 
                             </ul>
                         </div>
+                        <div class="mt-6 flex flex-col gap-4 sm:mt-0">
+                        <p class="text-deutziawhite font-inter text-[18px] font-medium">Follow Us On</p>
+                        <div class="flex gap-4 sm:flex-col">
+                            <a href="https://www.instagram.com/init_society/"
+                                class="text-white hover:text-gray-400">Instagram <i class="fab fa-instagram"></i></a>
+                            <a href="https://www.linkedin.com/company/init-association/posts/?feedView=all"
+                                class="text-white hover:text-gray-400">LinkedIn <i class="fab fa-linkedin"></i></a>
+                        </div>
                     </div>
                 </div>
-                <hr class="mt-[30px] text-white" />
-                <div class="flex items-center justify-center pb-8 pt-[9px] md:py-8">
-                    <p class="text-[10px] font-normal text-white md:text-[12px]">
-                        © Copyright
-                        <!-- -->2024
-                        <!-- -->, All Rights Reserved by init() IT Association |
-
-                        This website was made by T S Harikrishnan <a
-                            href="https://www.linkedin.com/in/t-s-harikrishnan-123497224/"
-                            class="text-white hover:text-gray-400"><i class="fab fa-linkedin"></i></a>
-                    </p>
-                </div>
             </div>
+            <hr class="mt-[30px] text-white" />
+            <div class="flex items-center justify-center pb-8 pt-[9px] md:py-8">
+                <p class="text-[10px] font-normal text-white md:text-[12px]">
+                    © Copyright
+                    <!-- -->2024
+                    <!-- -->, All Rights Reserved by init() IT Association |
+
+                    This website was made by T S Harikrishnan <a
+                        href="https://www.linkedin.com/in/t-s-harikrishnan-123497224/"
+                        class="text-white hover:text-gray-400"><i class="fab fa-linkedin"></i></a>
+                </p>
+            </div>
+        </div>
         </div>
     </main>
 
